--- a/source/less/components/contest.less
+++ b/source/less/components/contest.less
@@ -107,6 +107,8 @@
     padding-left: 0;
     padding-right: 0;
     padding-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -257,6 +259,8 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     padding: 45px 60px;
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
