--- a/source/less/components/research.less
+++ b/source/less/components/research.less
@@ -20,7 +20,7 @@
 
     background-image: url("../../img/clock-tablet.svg");
     background-repeat: no-repeat;
-    background-position: center left;
+    background-position: top 54px left;
   }
 
   @media (min-width: @desktop-width) {
@@ -47,8 +47,8 @@
   line-height: 36px;
   color: #000000;
 
-  margin-top: 102px;
-  margin-bottom: 24px;
+  margin-top: 96px;
+  margin-bottom: 10px;
 
   @media (min-width: @desktop-width) {
     line-height: 30px;
@@ -59,7 +59,7 @@
 
 .research__text {
   margin-top: 0;
-  margin-bottom: 24px;
+  margin-bottom: 10px;
 
   @media (min-width: @desktop-width) {
     font-size: 18px;
@@ -78,7 +78,7 @@
 .research__link {
   display: block;
   color: #d22856;
-  margin-bottom: 138px;
+  margin-bottom: 122px;
 
   @media (min-width: @desktop-width) {
     font-size: 18px;
