--- a/source/less/components/review.less
+++ b/source/less/components/review.less
@@ -14,7 +14,7 @@
 
   margin: 0 auto;
   width: 280px;
-  padding-top: 50px;
+  padding-top: 41px;
   box-sizing: border-box;
 
   @media (min-width: @tablet-width) {
@@ -37,11 +37,11 @@
   line-height: 30px;
   text-align: center;
   color: #000000;
-  margin-bottom: 31px;
+  margin-bottom: 14px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 17px;
-    font-size: 18px;
+    margin-bottom: 0;
+    font-size: 20px;
   }
 
   @media (min-width: @desktop-width) {
@@ -54,6 +54,7 @@
   text-align: center;
   margin: 0;
   min-height: 204px;
+  line-height: 30px;
 
   @media (min-width: @tablet-width) {
     order: -1;
@@ -74,7 +75,7 @@
 
   @media (min-width: @tablet-width) {
     margin-top: 0;
-    margin-bottom: 49px;
+    margin-bottom: 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -119,6 +120,10 @@
 
 .review__toggles {
   padding-bottom: 39px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 7px;
+  }
 
   @media (min-width: @desktop-width) {
     display: none;
