--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,12 +6,10 @@
 
 //components
 
-// @import "./components/page.less";
 @import "./components/page-header.less";
 @import "./components/main-nav.less";
 @import "./components/page-title.less";
 @import "./components/downloads.less";
-// @import "./components/page-index.less";
 @import "./components/suggests.less";
 @import "./components/research.less";
 @import "./components/slider.less";
@@ -23,9 +21,9 @@
 @import "./components/contest.less";
 @import "./components/field.less";
 @import "./components/control.less";
-// @import "./components/page-catalog.less";
 @import "./components/catalog.less";
 @import "./components/post.less";
 @import "./components/page-footer.less";
 @import "./components/social.less";
 @import "./components/development.less";
+@import "./components/modal.less";
