--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -61,28 +61,45 @@
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   @media (min-width: @tablet-width) {
     padding: 0;
     width: 300px;
+    margin-bottom: 0;
+  }
+}
+
+.catalog__item:not(:first-child) .catalog__item-wrapper {
+  @media (min-width: @tablet-width) {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
   }
 }
 
 .catalog__item-wrapper {
-  padding-left: 17px;
-  padding-right: 17px;
+  min-height: 121px;
+  padding: 25px 17px;
   box-sizing: border-box;
 
   background-color: #f2f2f2;
 
   @media (min-width: @tablet-width) {
-    height: 155px;
+    min-height: 155px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
 .catalog__item--panorama {
   width: 320px;
   margin: 0 auto;
+  margin-bottom: 20px;
   padding: 0;
 
   justify-content: flex-end;
@@ -91,13 +108,13 @@
     grid-column: ~"1 / -1";
 
     width: 660px;
-    height: 630px;
-    margin-bottom: 50px;
+    height: 665px;
+    margin-bottom: 0;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
-    height: 602px;
+    height: 638px;
   }
 }
 
@@ -107,6 +124,7 @@
 
   @media (min-width: @tablet-width) {
     width: 620px;
+    min-height: 121px;
     box-sizing: border-box;
     margin: 0;
 
@@ -117,6 +135,7 @@
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    min-height: 96px;
   }
 }
 
@@ -151,16 +170,52 @@
 .catalog__autor {
   font-style: normal;
   font-weight: bold;
+  margin-bottom: 14px;
 }
 
 .catalog__time {
   font-weight: 300;
   font-size: 12px;
   text-transform: uppercase;
+  margin: 0;
+}
+
+.catalog__text {
+  margin-top: 0;
+  margin-bottom: 27px;
+  flex-grow: 1;
 }
 
 .catalog__likes {
   font-size: 12px;
   text-transform: uppercase;
   color: #d22856;
+  padding-left: 30px;
+  margin: 0;
+  position: relative;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 0;
+  }
+
+  &--panorama {
+    width: 120px;
+    height: 22px;
+  }
+
+  &::after {
+    content: "";
+    width: 13px;
+    height: 12px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    margin-top: -6px;
+    background-image: url("../../img/heart-icon.svg");
+
+    @media (min-width: @tablet-width) {
+      left: auto;
+      right: 0;
+    }
+  }
 }
