--- a/source/less/components/feedback.less
+++ b/source/less/components/feedback.less
@@ -32,7 +32,8 @@
   line-height: 29px;
   text-align: center;
 
-  margin-bottom: 45px;
+  margin-top: 40px;
+  margin-bottom: 35px;
 
   @media (min-width: @tablet-width) {
     font-size: 40px;
@@ -54,7 +55,7 @@
   flex-direction: column;
   align-items: center;
 
-  margin-bottom: 35px;
+  margin-bottom: 18px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 55px;
