--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -277,6 +277,16 @@
   color: #d22856;
   margin-bottom: 12px;
 
+  &:hover {
+    background-color: #d22856;
+    color: #ffffff;
+  }
+
+  &:active {
+    background-color: #d22856;
+    color: fade(#ffffff, 30%);
+  }
+
   @media (min-width: @tablet-width) {
     margin-bottom: 24px;
   }
