--- a/source/less/components/downloads.less
+++ b/source/less/components/downloads.less
@@ -24,9 +24,10 @@
   @media (min-width: @desktop-width) {
     width: 940px;
     margin: 0 auto;
-    padding-bottom: 130px;
+    padding-top: 100px;
+    padding-bottom: 127px;
     background-image: url("../../img/bg-index-hand-desktop.png");
-    background-position: bottom center;
+    background-position: bottom left 15px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../../img/bg-index-hand-desktop@2x.png");
@@ -46,6 +47,7 @@
 
   @media (min-width: @desktop-width) {
     width: 300px;
+    margin-left: 0;
   }
 }
 
@@ -106,8 +108,11 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 51px;
+    margin-top: 36px;
     margin-bottom: 67px;
+    font-size: 21px;
+    padding-left: 25px;
+    padding-right: 25px;
   }
 }
 
@@ -126,7 +131,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 58px;
+    margin-bottom: 50px;
   }
 }
 
@@ -155,6 +160,10 @@
   @media (min-width: @tablet-width) {
     height: 48px;
   }
+
+  @media (min-width: @desktop-width) {
+    height: 55px;
+  }
 }
 
 .downloads__link--windows {
@@ -162,6 +171,10 @@
 
   @media (min-width: @tablet-width) {
     height: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 50px;
   }
 }
 
