--- a/source/less/components/page-header.less
+++ b/source/less/components/page-header.less
@@ -43,17 +43,17 @@
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 77px;
+    margin-bottom: 60px;
     padding-bottom: 0;
   }
 }
 
 .page-header--inset {
-  margin-bottom: 54px;
+  margin-bottom: 45px;
   min-height: 237px;
 
   @media (min-width: @tablet-width) {
-    margin-bottom: 100px;
+    margin-bottom: 90px;
     min-height: 440px;
   }
 
@@ -78,6 +78,10 @@
   @media (min-width: @tablet-width) {
     padding-top: 27px;
     padding-bottom: 43px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 0;
   }
 
   &:hover {
