--- a/source/less/components/research.less
+++ b/source/less/components/research.less
@@ -27,6 +27,7 @@
     width: 940px;
 
     background-image: url("../../img/clock-desktop.svg");
+    background-position: top 5px left;
   }
 }
 
@@ -53,7 +54,8 @@
   @media (min-width: @desktop-width) {
     line-height: 30px;
 
-    margin-bottom: 37px;
+    margin-bottom: 26px;
+    margin-top: 101px;
   }
 }
 
@@ -65,7 +67,7 @@
     font-size: 18px;
     line-height: 30px;
 
-    margin-bottom: 47px;
+    margin-bottom: 30px;
   }
 }
 
@@ -84,6 +86,6 @@
     font-size: 18px;
     line-height: 30px;
 
-    margin-bottom: 120px;
+    margin-bottom: 112px;
   }
 }
