--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -1,7 +1,3 @@
-.catalog {
-  position: relative;
-}
-
 .catalog__title {
   font-size: 14px;
   font-weight: 400;
@@ -9,7 +5,7 @@
   text-align: center;
 
   margin-top: 0;
-  margin-bottom: 60px;
+  margin-bottom: 49px;
 
   @media (min-width: @tablet-width) {
     font-size: 18px;
@@ -21,6 +17,16 @@
 
   @media (min-width: @desktop-width) {
     width: 575px;
+  }
+}
+
+.catalog__title-br {
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: inline;
   }
 }
 
@@ -84,15 +90,33 @@
 
 .catalog__item-wrapper {
   min-height: 121px;
-  padding: 25px 17px;
+  padding: 19px 0 18px 17px;
   box-sizing: border-box;
 
   background-color: #f2f2f2;
 
   @media (min-width: @tablet-width) {
     min-height: 155px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 23px 0 16px 30px;
+  }
+}
+
+.catalog__item-link--panorama {
+  position: relative;
+
+  &::after {
+    content: "";
+    width: 140px;
+    height: 36px;
+    background-image: url("../../img/panorama-of-day.svg");
+    position: absolute;
+    top: 0;
+    right: 20px;
+
+    @media (min-width: @tablet-width) {
+      top: -452px;
+      right: 40px;
+    }
   }
 }
 
@@ -108,8 +132,8 @@
     grid-column: ~"1 / -1";
 
     width: 660px;
-    height: 665px;
-    margin-bottom: 0;
+    padding-top: 502px;
+    margin-bottom: 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -156,9 +180,9 @@
     width: 660px;
     height: auto;
     position: absolute;
-    top: 141px;
+    top: -509px;
     left: 50%;
-    margin-left: -330px;
+    margin-left: -350px;
   }
 
   @media (min-width: @desktop-width) {
@@ -182,7 +206,7 @@
 
 .catalog__text {
   margin-top: 0;
-  margin-bottom: 27px;
+  margin-bottom: 10px;
   flex-grow: 1;
 }
 
@@ -196,11 +220,7 @@
 
   @media (min-width: @tablet-width) {
     padding-left: 0;
-  }
-
-  &--panorama {
-    width: 120px;
-    height: 22px;
+    padding-bottom: 8px;
   }
 
   &::after {
@@ -215,7 +235,26 @@
 
     @media (min-width: @tablet-width) {
       left: auto;
+      right: 30px;
+      top: 5px;
+      margin-top: 0;
+    }
+  }
+}
+
+.catalog__likes--panorama {
+  width: 120px;
+  height: 22px;
+  margin-right: 30px;
+  margin-top: 3px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 0;
+
+    &::after {
+      left: auto;
       right: 0;
+      top: 4px;
     }
   }
 }
