--- a/source/less/components/main-nav.less
+++ b/source/less/components/main-nav.less
@@ -73,7 +73,7 @@
   @media (min-width: @desktop-width) {
     box-shadow: none;
     padding: 0;
-    margin-right: 78px;
+    margin-right: 80px;
     background-color: transparent;
 
     &:last-child {
@@ -103,7 +103,7 @@
     font-size: 18px;
     line-height: 18px;
 
-    padding: 48px 0;
+    padding: 46px 0;
     position: relative;
 
     &--current::after {
@@ -117,6 +117,10 @@
       bottom: 29px;
     }
   }
+}
+
+.main-nav__link--uppercase {
+  text-transform: uppercase;
 }
 
 .main-nav__toggle {
