--- a/source/less/components/page-title.less
+++ b/source/less/components/page-title.less
@@ -16,8 +16,9 @@
   font-size: 24px;
   font-weight: 300;
   text-align: center;
+  line-height: 33px;
 
-  margin-top: 36px;
+  margin-top: 25px;
   margin-bottom: 0;
   padding-left: 20px;
   padding-right: 20px;
@@ -26,7 +27,7 @@
     font-size: 50px;
     line-height: 68px;
 
-    margin-top: 81px;
+    margin-top: 66px;
   }
 
   @media (min-width: @desktop-width) {
