--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -25,7 +25,14 @@
 
   margin-top: 0;
   margin-bottom: 20px;
-  padding: 49px 20px 52px 20px;
+  padding: 40px 20px 45px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 18px;
+
+    padding-top: 62px;
+    padding-bottom: 71px;
+  }
 }
 
 .post__form {
@@ -42,7 +49,7 @@
   display: block;
   width: 280px;
   margin: 0 auto;
-  margin-bottom: 42px;
+  margin-bottom: 40px;
 
   @media (min-width: @tablet-width) {
     width: 300px;
@@ -76,7 +83,7 @@
   align-items: center;
   position: relative;
   padding-bottom: 67px;
-  margin-bottom: 38px;
+  margin-bottom: 40px;
 
   @media (max-width: @mobile-width-only) {
     &::after {
@@ -86,7 +93,7 @@
       background-color: fade(#283645, 10%);
 
       position: absolute;
-      bottom: 0;
+      bottom: -2px;
     }
   }
 
@@ -102,7 +109,8 @@
 }
 
 .post__toggle {
-  margin-right: 35px;
+  width: 48px;
+  margin-right: 33px;
 
   &:last-child {
     margin-right: 0;
@@ -220,7 +228,7 @@
   border: 2px solid #d22856;
 
   position: absolute;
-  top: -6px;
+  top: -5px;
 
   &:hover,
   &:active {
@@ -229,7 +237,7 @@
 }
 
 .post__toggle-button--crop {
-  left: 160px;
+  left: 193px;
 }
 
 .post__toggle-button--fill {
