--- a/source/less/components/review.less
+++ b/source/less/components/review.less
@@ -24,7 +24,7 @@
 
   @media (min-width: @desktop-width) {
     width: 688px;
-    padding-top: 193px;
+    padding-top: 185px;
   }
 }
 
@@ -46,7 +46,7 @@
 
   @media (min-width: @desktop-width) {
     font-size: 24px;
-    margin-bottom: 17px;
+    margin-bottom: 5px;
   }
 }
 
@@ -80,7 +80,7 @@
 
   @media (min-width: @desktop-width) {
     font-size: 18px;
-    margin-bottom: 41px;
+    margin-bottom: px;
   }
 }
 
