--- a/source/less/components/social.less
+++ b/source/less/components/social.less
@@ -1,3 +1,14 @@
+.social {
+  @media (min-width: @tablet-width) {
+    margin-left: 75px;
+    margin-top: 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-left: 235px;
+  }
+}
+
 .social__list {
   margin: 0;
   padding: 0;
@@ -33,6 +44,11 @@
 
   &:active {
     opacity: 0.3;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 5px;
+    margin-right: 6px;
   }
 }
 
