--- a/source/less/components/tariffs.less
+++ b/source/less/components/tariffs.less
@@ -19,7 +19,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    background-position: top 0 center;
+    background-position: top center;
   }
 }
 
@@ -38,12 +38,13 @@
     width: 620px;
     margin: 0 auto;
     margin-bottom: 70px;
-    padding-top: 100px;
+    padding-top: 107px;
   }
 
   @media (min-width: @desktop-width) {
     width: 940px;
     margin-bottom: 100px;
+    padding-top: 156px;
   }
 }
 
@@ -64,6 +65,7 @@
 
   @media (min-width: @desktop-width) {
     font-size: 18px;
+    margin-top: 0;
   }
 }
 
@@ -77,6 +79,10 @@
   color: #ffffff;
 
   margin-bottom: 15px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 12px;
+  }
 
   @media (min-width: @desktop-width) {
     font-size: 24px;
@@ -93,6 +99,31 @@
 
 .tariffs__item-cell {
   padding-bottom: 16px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 0;
+    width: 150px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 230px;
+    height: 97px;
+  }
+}
+
+.tariffs__item-cell--hit {
+  background-image: url("../../img/hit.svg");
+  background-repeat: no-repeat;
+  background-position: top -1px left -2px;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../../img/hit-tablet.svg");
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../../img/hit.svg");
+    background-position: top -1px left;
+  }
 }
 
 .tariffs__options {
@@ -105,6 +136,11 @@
 
   @media (min-width: @tablet-width) {
     background-position: center;
+    height: 42px;
+  }
+
+  @media (min-width: @desktop-width) {
+    height: 55px;
   }
 }
 
@@ -124,13 +160,27 @@
   }
 }
 
+.tariffs__options-name,
+.tariffs__option-name-value {
+  font-weight: 400;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
 .tariffs__options-name {
   @media (max-width: @mobile-width-only) {
     display: none;
   }
 
+  @media (min-width: @tablet-width) {
+    text-transform: none;
+    text-align: left;
+    padding-left: 15px;
+  }
+
   @media (min-width: @desktop-width) {
     font-size: 18px;
+    padding-left: 20px;
   }
 }
 
@@ -140,13 +190,6 @@
   @media (min-width: @tablet-width) {
     display: none;
   }
-}
-
-.tariffs__options-name,
-.tariffs__option-name-value {
-  font-weight: 400;
-  line-height: 30px;
-  text-transform: uppercase;
 }
 
 .tariffs__toggles {
