--- a/source/less/components/control.less
+++ b/source/less/components/control.less
@@ -24,31 +24,32 @@
 }
 
 .control__input[type="checkbox"] + .control__mark {
-  width: 31px;
-  height: 31px;
+  width: 35px;
+  height: 35px;
   border-radius: 1px;
 
   left: 0;
   top: -2px;
 
   @media (min-width: @tablet-width) {
-    left: 60px;
+    left: 38px;
   }
 
   @media (min-width: @desktop-width) {
     left: 0;
+    top: -5px;
   }
 }
 
 .control__input[type="checkbox"]:checked + .control__mark {
   background-image: url("../../img/checkbox-tick.svg");
   background-repeat: no-repeat;
-  background-position: top 7px left 5px;
+  background-position: top 9px left 7px;
 }
 
 .control__input[type="radio"] + .control__mark {
-  width: 33px;
-  height: 33px;
+  width: 37px;
+  height: 37px;
   border-radius: 50%;
 
   left: 0;
@@ -81,13 +82,13 @@
   padding-left: 60px;
 
   @media (min-width: @tablet-width) {
-    padding-left: 120px;
+    padding-left: 97px;
   }
 
   @media (min-width: @desktop-width) {
     width: 200px;
-    padding-left: 57px;
-    margin-left: 40px;
+    padding-left: 60px;
+    margin-left: 45px;
   }
 }
 
