--- a/source/less/components/contest.less
+++ b/source/less/components/contest.less
@@ -179,6 +179,7 @@
   @media (min-width: @desktop-width) {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-left: 0;
     margin-right: 0;
