--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -255,7 +255,7 @@
 
 .catalog__likes--panorama {
   width: 120px;
-  height: 22px;
+  min-height: 22px;
   margin-right: 30px;
   margin-top: 3px;
 
