--- a/source/less/components/social.less
+++ b/source/less/components/social.less
@@ -14,7 +14,9 @@
   padding: 0;
   list-style-type: none;
 
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
 
   @media (max-width: @mobile-width-only) {
     margin-bottom: 38px;
@@ -32,12 +34,6 @@
   justify-content: center;
   align-items: center;
 
-  margin-right: 8px;
-
-  &:nth-child(3n) {
-    margin-right: 0;
-  }
-
   &:hover {
     border-color: #283645;
   }
@@ -48,7 +44,6 @@
 
   @media (min-width: @desktop-width) {
     margin-top: 5px;
-    margin-right: 6px;
   }
 }
 
