Исправления по сдаче

--- a/source/less/components/catalog.less
+++ b/source/less/components/catalog.less
@@ -12,11 +12,12 @@
 
     width: 450px;
     margin: 0 auto;
-    margin-bottom: 85px;
+    margin-bottom: 80px;
   }
 
   @media (min-width: @desktop-width) {
     width: 575px;
+    margin-bottom: 86px;
   }
 }
 
@@ -97,7 +98,7 @@
 
   @media (min-width: @tablet-width) {
     min-height: 155px;
-    padding: 23px 0 16px 30px;
+    padding: 22px 0 14px 30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -118,7 +119,7 @@
     right: 20px;
 
     @media (min-width: @tablet-width) {
-      top: -452px;
+      top: -447px;
       right: 40px;
     }
 
@@ -161,6 +162,7 @@
     min-height: 121px;
     box-sizing: border-box;
     margin: 0;
+    padding: 28px 0 14px 30px;
 
     display: flex;
     justify-content: space-between;
@@ -170,12 +172,17 @@
   @media (min-width: @desktop-width) {
     width: 940px;
     min-height: 96px;
+    padding: 26px 0 22px 27px;
   }
 }
 
 .catalog__item--panorama .catalog__text {
   @media (min-width: @tablet-width) {
     order: 2;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 0;
   }
 }
 
