--- a/source/less/components/contest.less
+++ b/source/less/components/contest.less
@@ -35,7 +35,7 @@
   }
 }
 
-.contest__title--hidden {
+.contest__title-text--hidden {
   @media (max-width: @mobile-width-only) {
     display: none;
   }
@@ -123,7 +123,7 @@
   }
 }
 
-.contest__legend--br {
+.contest__legend-br {
   @media (min-width: @tablet-width) {
     display: none;
   }
