--- a/source/less/components/page-header.less
+++ b/source/less/components/page-header.less
@@ -3,7 +3,6 @@
   background-repeat: no-repeat;
   background-image: url("../../img/bg-tablet.jpg");
   background-size: auto 462px;
-  background-position: top center;
 
   @media (min-resolution: 2dppx) {
     background-image: url("../../img/bg-tablet@2x.png");
@@ -36,10 +35,12 @@
 .page-header--index {
   margin-bottom: 40px;
   padding-bottom: 31px;
+  background-position: bottom 271px center;
 
   @media (min-width: @tablet-width) {
     padding-bottom: 0;
     margin-bottom: 47px;
+    background-position: bottom center;
   }
 
   @media (min-width: @desktop-width) {
@@ -51,15 +52,21 @@
 .page-header--inset {
   margin-bottom: 45px;
   min-height: 237px;
+  padding-bottom: 77px;
+  background-position: bottom -225px center;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 90px;
     min-height: 440px;
+    padding-bottom: 129px;
+    background-position: bottom -290px center;
   }
 
   @media (min-width: @desktop-width) {
     min-height: 394px;
     background-image: url("../../img/bg-desktop-inset.jpg");
+    background-position: top center;
+    padding-bottom: 88px;
 
 
     @media (min-resolution: 2dppx) {
