--- a/source/less/components/post.less
+++ b/source/less/components/post.less
@@ -13,7 +13,7 @@
   @media (min-width: @desktop-width) {
     width: 940px;
     margin-bottom: 88px;
-    padding-bottom: 34px;
+    padding-bottom: 55px;
   }
 }
 
@@ -48,6 +48,7 @@
 
   @media (min-width: @desktop-width) {
     width: 940px;
+    margin-top: 58px;
   }
 }
 
@@ -61,6 +62,7 @@
     width: 300px;
     margin: 0;
     margin-right: 45px;
+    margin-left: 20px;
   }
 
   @media (min-width: @desktop-width) {
