Исправления после проверки

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -16,7 +16,7 @@
 @import "./components/review.less";
 @import "./components/tariffs.less";
 @import "./components/feedback.less";
-@import "./components/page-form.less";
+@import "./components/button.less";
 @import "./components/map.less";
 @import "./components/contest.less";
 @import "./components/field.less";
