Исправления по защите

--- a/source/less/components/field.less
+++ b/source/less/components/field.less
@@ -138,6 +138,7 @@
 
   height: 200px;
   box-sizing: border-box;
+  resize: none;
 
   @media (max-width: @mobile-width-only) {
     max-width: 280px;
