--- a/source/less/components/suggests.less
+++ b/source/less/components/suggests.less
@@ -3,7 +3,7 @@
   background-image: url("../../img/triangle-grey-bg.svg");
   background-repeat: no-repeat;
   background-position: top 145px center;
-  background-size: 1200px;
+  background-size: 100%;
 
   @media (min-width: @tablet-width) {
     background-position: top 168px center;
