--- a/source/less/components/tariffs.less
+++ b/source/less/components/tariffs.less
@@ -1,8 +1,9 @@
 .tariffs {
   background-color: #ffffff;
   background-image: url("../../img/triangle-grey-bg.svg");
-  background-position: top -40px center;
+  background-position: top center;
   background-repeat: no-repeat;
+  background-size: 100%;
 
   position: relative;
   overflow: hidden;
@@ -12,14 +13,6 @@
 
   @media (max-width: @mobile-width-only) {
     min-height: 380px;
-  }
-
-  @media (min-width: @tablet-width) {
-    background-position: top -20px center;
-  }
-
-  @media (min-width: @desktop-width) {
-    background-position: top center;
   }
 }
 
