--- a/source/less/components/map.less
+++ b/source/less/components/map.less
@@ -1,8 +1,6 @@
 .map {
-  max-width: 1200px;
-  margin: 0 auto;
-
-  position: relative;
+  height: 216px;
+  margin-bottom: 40px;
 
   &::after {
     content: "";
@@ -13,6 +11,7 @@
     height: 49px;
     background-image: url("../../img/triangle-white-bg.svg");
     background-position: bottom center;
+    background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
       height: 58px;
@@ -22,24 +21,43 @@
       height: 115px;
     }
   }
-}
-
-.map__frame {
-  display: block;
-  width: 100%;
-  height: 216px;
-
-  margin-bottom: 40px;
 
   @media (min-width: @tablet-width) {
     height: 365px;
-
     margin-bottom: 32px;
   }
 
   @media (min-width: @desktop-width) {
     height: 515px;
-
     margin-bottom: 58px;
   }
+}
+
+.map__image {
+  margin: 0 auto;
+  background-image: url("../../img/map.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 1200px;
+  height: 100%;
+
+  display: none;
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../../img/map@2x.jpg");
+  }
+}
+
+.map__image--nojs {
+  display: block;
+}
+
+.map__frame {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.map__frame--nojs {
+  display: none;
 }
